<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="4dp">

        <ImageView
            android:id="@+id/book_cover_image_view"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:background="@color/colorPrimaryWhite"
            android:adjustViewBounds="false"
            android:contentDescription="@string/book_cover_image_view_hint" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="-4dp"
        android:layout_marginLeft="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_title_text_view"
                android:labelFor="@+id/book_title_edit_text" />

            <EditText
                android:id="@id/book_title_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/book_title_edit_text_hint"
                android:inputType="text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_author_text_view"
                android:labelFor="@+id/book_author_edit_text" />

            <EditText
                android:id="@id/book_author_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"
                android:hint="@string/book_author_edit_text_hint"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/translator_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_translator_text_view"
                android:labelFor="@+id/book_translator_edit_text" />

            <EditText
                android:id="@id/book_translator_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"
                android:hint="@string/book_translator_edit_text_hint"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_publisher_text_view"
                android:labelFor="@+id/book_publisher_edit_text" />

            <EditText
                android:id="@id/book_publisher_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"
                android:hint="@string/book_publisher_edit_text_hint"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_pubdate_text_view" />

            <EditText
                android:id="@+id/book_pubyear_edit_text"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:inputType="number"
                android:hint="@string/book_pubyear_edit_text_hint"
                android:layout_marginLeft="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

            <EditText
                android:id="@+id/book_pubmonth_edit_text"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="number"
                android:hint="@string/book_pubmonth_edit_text_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_isbn_text_view"
                android:labelFor="@+id/book_isbn_edit_text" />

            <EditText
                android:id="@id/book_isbn_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:hint="@string/book_isbn_edit_text_hint"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>